@@ -49,6 +49,12 @@ import gtk
 import gtk.glade
 import Errors
 
+#This is a GNOME only plugin
+_gnome_session = os.getenv('GNOME_DESKTOP_SESSION_ID')
+if not _gnome_session:
+    raise Errors.UnavailableError(
+        _("WriteCD is a GNOME plugin and you are not running GNOME"))
+        
 try:
     import gnome
 except ImportError:
@@ -57,9 +63,11 @@ except ImportError:
           "for GNOME are not installed"))
 
 try:
-    from gnomevfs import URI, create, OPEN_WRITE, make_directory, FileExistsError
+    from gnomevfs import URI, create, OPEN_WRITE, make_directory, \
+                            FileExistsError
 except:
-    from gnome.vfs import URI, create, OPEN_WRITE, make_directory, FileExistsError
+    from gnome.vfs import URI, create, OPEN_WRITE, make_directory, \
+                            FileExistsError
 
 #-------------------------------------------------------------------------
 #
